REGRESSION: flexbox content-size fails to exclude scrollbar https://bugs.webkit.org/show_bug.cgi?id=92667

Reviewed by Ojan Vafai.

Source/WebCore:

In r123909, we switched to computing the height using computeContentLogicalHeightUsing().
Unfortunately, this includes the scrollbar when we want the content height. Add a helper
method for computing the value needed by flexbox.

Test: css3/flexbox/content-height-with-scrollbars.html

* rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::mainAxisContentExtent): Use computeLogicalClientHeight
(WebCore::RenderFlexibleBox::computeLogicalClientHeight): Add new method for taking scrollbar into consideration.
(WebCore::RenderFlexibleBox::computeAvailableFreeSpace): Use computeLogicalClientHeight
(WebCore::RenderFlexibleBox::lineBreakLength): Use computeLogicalClientHeight
* rendering/RenderFlexibleBox.h:

LayoutTests:

Add column flow test cases with scrollbars forced on.

* css3/flexbox/content-height-with-scrollbars-expected.html: Added.
* css3/flexbox/content-height-with-scrollbars.html: Added.


Canonical link: https://commits.webkit.org/110653@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124278 268f45cc-cd09-0410-ab3c-d52691b4dbfc