Source/WebCore/rendering/RenderFlexibleBox.h
@@ -85,6 +85,7 @@ private:
     LayoutUnit mainAxisExtent() const;
     LayoutUnit crossAxisContentExtent() const;
     LayoutUnit mainAxisContentExtent();
+    LayoutUnit computeLogicalClientHeight(SizeType, const Length& height);
     WritingMode transformedWritingMode() const;
     LayoutUnit flowAwareBorderStart() const;
     LayoutUnit flowAwareBorderEnd() const;
